payload/apps/pelican/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pelican
spec:
  selector:
    app: pelican
  ports:
    - port: 80
      targetPort: 80
      name: http
